--- a/sortalgorithms.ui
+++ b/sortalgorithms.ui
@@ -19,7 +19,7 @@
      <rect>
       <x>20</x>
       <y>50</y>
-      <width>191</width>
+      <width>171</width>
       <height>192</height>
      </rect>
     </property>
@@ -83,7 +83,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>80</y>
+      <y>160</y>
       <width>115</width>
       <height>32</height>
      </rect>
@@ -96,7 +96,7 @@
     <property name="geometry">
      <rect>
       <x>220</x>
-      <y>120</y>
+      <y>200</y>
       <width>115</width>
       <height>32</height>
      </rect>
@@ -108,10 +108,10 @@
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>370</x>
       <y>20</y>
       <width>140</width>
-      <height>158</height>
+      <height>211</height>
      </rect>
     </property>
     <property name="title">
@@ -126,9 +126,6 @@
        <property name="checked">
         <bool>true</bool>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">btnGrp_SortMethod</string>
-       </attribute>
       </widget>
      </item>
      <item>
@@ -136,9 +133,6 @@
        <property name="text">
         <string>Heap Sort</string>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">btnGrp_SortMethod</string>
-       </attribute>
       </widget>
      </item>
      <item>
@@ -146,9 +140,6 @@
        <property name="text">
         <string>Quick Sort</string>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">btnGrp_SortMethod</string>
-       </attribute>
       </widget>
      </item>
      <item>
@@ -156,9 +147,6 @@
        <property name="text">
         <string>Merge Sort</string>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">btnGrp_SortMethod</string>
-       </attribute>
       </widget>
      </item>
      <item>
@@ -169,9 +157,6 @@
        <property name="text">
         <string>Selection Sort</string>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">btnGrp_SortMethod</string>
-       </attribute>
       </widget>
      </item>
      <item>
@@ -182,12 +167,58 @@
        <property name="text">
         <string>Bubble Sort</string>
        </property>
-       <attribute name="buttonGroup">
-        <string notr="true">btnGrp_SortMethod</string>
-       </attribute>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_DoSort">
+       <property name="text">
+        <string>Do Sort</string>
+       </property>
       </widget>
      </item>
     </layout>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>100</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Num. of Entry</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="spBx_NumOfEntry">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>100</y>
+      <width>42</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>1000</number>
+    </property>
+    <property name="value">
+     <number>10</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_ClearFootprint">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>260</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Clear</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -213,7 +244,4 @@
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
- <buttongroups>
-  <buttongroup name="btnGrp_SortMethod"/>
- </buttongroups>
 </ui>
